code optimization, fix lamps